# retirement-core

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
data/rules/: README.md
docs/: architecture.md
docs/adr/: 0001-python-fastapi-postgresql.md  0002-no-hardcoded-regulatory-values.md  0003-immutable-plan-versions-and-runs.md
examples/: baseline_plan.json
src/retirement_core/: config.py  config.py:Zone.Identifier
src/retirement_core/api/: app.py  dependencies.py
src/retirement_core/application/: services.py
src/retirement_core/domain/: enums.py  federal_liability.py  (+3 more)
tests/: test_api.py  test_federal_agi_self_employment.py  test_federal_tax.py  test_federal_tax_liability.py  test_ledger.py  test_medicare_irmaa.py  test_missouri_tax.py  test_projection.py  test_projection_federal_agi.py  test_projection_federal_tax.py  test_projection_federal_tax_by_year.py  test_projection_investment_returns.py  test_projection_medicare_irmaa.py  test_projection_missouri_tax.py  test_projection_partial_growth.py  test_projection_recurring_income.py  test_projection_rmd_401k.py  test_projection_rmd_qcd.py  test_projection_self_employment_inputs.py  test_projection_social_security_multi_year.py  test_projection_social_security_tax.py  test_projection_unsupported_federal_tax_year.py  test_qcd_policy.py  test_rmd_obligations_401k.py  test_rmd_qcd.py  test_self_employment_tax.py  test_social_security_tax.py  test_transactions.py
(+28 files in other folders)
