[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "retirement-core"
version = "0.1.0"
description = "Retirement calculation, optimization, and reporting engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.41,<3",
  "alembic>=1.16,<2",
  "psycopg[binary]>=3.2,<4",
  "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "httpx2>=2.5,<3",
  "ruff>=0.12,<1",
  "mypy>=1.16,<2",
  "hypothesis>=6.135,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retirement_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["retirement_core"]
